--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-SDFDFSGDSGDGDGDF
-
 @font-face {
 	font-family: 'icomoon';
 	src:url('fonts/icomoon.eot?-lhe8rc');
@@ -54,7 +52,7 @@ SDFDFSGDSGDGDGDF
 }
 
 nav{
-	background: #63a9b5;	
+	background: red;	
 }
 
 nav ul{
@@ -75,7 +73,7 @@ nav ul li{
 
 nav ul li:hover{
 	background: gray;
-	color:white;
+	color:green;
 }
 
 #contenedor{
